Issue #1: HIH API: zero-pad week numbers to 2 digits

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "current-week-number": "^1.0.7",
     "express": "^4.16.2",
+    "lodash.padstart": "^4.6.1",
     "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
